Se agrega menu dynamico usando ViewComponent

--- a/VentaDeProductos/VentaDeProductos.csproj
+++ b/VentaDeProductos/VentaDeProductos.csproj
@@ -23,4 +23,14 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="ViewComponents\" />
+    <None Remove="Views\Shared\Components\" />
+    <None Remove="Views\Shared\Components\Menu\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewComponents\" />
+    <Folder Include="Views\Shared\Components\" />
+    <Folder Include="Views\Shared\Components\Menu\" />
+  </ItemGroup>
 </Project>
