Cambios al product card y a la vista de detalles del producto

--- a/VentaDeProductos/VentaDeProductos.csproj
+++ b/VentaDeProductos/VentaDeProductos.csproj
@@ -27,10 +27,12 @@
     <None Remove="ViewComponents\" />
     <None Remove="Views\Shared\Components\" />
     <None Remove="Views\Shared\Components\Menu\" />
+    <None Remove="Views\Login\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewComponents\" />
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\Menu\" />
+    <Folder Include="Views\Login\" />
   </ItemGroup>
 </Project>
